Bold home-nav text for legibility and fix uneven box sizing

--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -36,6 +36,9 @@
   background-color: white;
   border: 2px solid black;
   margin: 5px;
+  font-weight: bold;
+  font-size: 16px;
+  padding: 0;
  }
 
 .home-nav:hover {
